...
    val parameterScreenUiState: HomeUiState by viewModel.homeScreenUiState.collectAsState()

    val focusManager = LocalFocusManager.current

    val keyboardController = LocalSoftwareKeyboardController.current

    var maxRegn = parameterScreenUiState.maxRegn
    var textRegn by remember { mutableStateOf("$maxRegn") }

    var maxToke = parameterScreenUiState.maxToke
    var textToke by remember { mutableStateOf("$maxToke") }

    var maxSkydekke = parameterScreenUiState.maxSkydekke
    var textSkydekke by remember { mutableStateOf("$maxSkydekke") }

    var maxGust = parameterScreenUiState.maxGust
    var textGust by remember { mutableStateOf("$maxGust") }

    var maxDewPoint = parameterScreenUiState.maxDewPoint
    var textDewPoint by remember { mutableStateOf("$maxDewPoint") }

    var maxRelativHumidity = parameterScreenUiState.maxRelativHumidity
    var textRelativHumidity by remember { mutableStateOf("$maxRelativHumidity") }

    var maxSheerWind = parameterScreenUiState.maxSheerWind
    var textSheerWind by remember { mutableStateOf("$maxSheerWind") }

    var maxVindILufta = parameterScreenUiState.maxVindILufta
    var textVindILufta by remember { mutableStateOf("$maxVindILufta") }

    val showSnackbarError = remember { mutableStateOf(false) }


    var textLys1 by remember {
...
                ),
            )

        }
        item {
            OutlinedTextField(
                modifier = Modifier.semantics { this.contentDescription = "maxTåke" },
                value = textToke,
                onValueChange = {
                    if (it.isDoubleValue()) {
                        textToke = it
                    } else if (it.isEmpty()) {
                        textToke = ""
...

                    },
                    colors = ButtonDefaults.buttonColors(
                        containerColor = MaterialTheme.colorScheme.onSurface,
                        contentColor = MaterialTheme.colorScheme.primary
                    ),
                    modifier = Modifier.semantics { this.contentDescription = "Set Default" }
                )
                { Text("Tilbakestill") }


                Button(
                    onClick =
...
