...
                        },
                        modifier = Modifier.weight(1f)
                    ) {
                        Column(horizontalAlignment = Alignment.CenterHorizontally) {
                            Icon(
                                Icons.Default.Home,
                                contentDescription = "Home",
                                modifier = Modifier.size(26.dp),
                                tint = if (selected.value == Icons.Default.Home) Color.White else Color.DarkGray
                            )
                            Text(
                                text = "Home",
                                color = if (selected.value == Icons.Default.Home) Color.White else Color.DarkGray,
...
                        },
                        modifier = Modifier.weight(1f)
                    ) {
                        Column(horizontalAlignment = Alignment.CenterHorizontally) {
                            Icon(
                                Icons.Default.Check,
                                contentDescription = "Parameter",
                                modifier = Modifier.size(26.dp),
                                tint = if (selected.value == Icons.Default.Check) Color.White else Color.DarkGray
                            )
                            Text(
                                text = "Parameters",
                                color = if (selected.value == Icons.Default.Check) Color.White else Color.DarkGray,
...
